project('foo', 'c')
into = get_option('intopt') # ana:var: into = int
stro = get_option('stringopt') # ana:var: stro = str
comboo = get_option('comboopt') # ana:var: comboo = str
arrayo = get_option('arrayopt') # ana:var: arrayo = list(str)
booleano = get_option('booleanopt') # ana:var: booleano = bool
featureo = get_option('featureopt') # ana:var: featureo = feature
nonexisting = get_option('nonexisting') # ana:var: nonexisting = str|int|bool|feature|list(str|int|bool)
